# crailnative

./: CMakeLists.txt
crail/: CMakeLists.txt  libcrail.pc
crail/client/: crail_inputstream.h  crail_keyvalue.cc  crail_keyvalue.h  crail_outputstream.cc  crail_outputstream.h  crail_store.h  crail_table.cc  crail_table.h  directory_record.h
crail/client/api/: crail_client.cc  crail_client.h
crail/client/common/: block_cache.cc  block_cache.h  file_type.h  serializable.h
crail/client/ioutils/: byte_buffer.cc
crail/client/metadata/: block_info.h  datanode_info.h  filename.h
crail/client/namenode/: create_request.h  getblock_request.h  ioctl_request.h  namenode_request.h  namenode_response.h  remove_request.cc  setfile_request.h
crail/client/namenode/narpc/: narpc_create_response.h  narpc_getblock_response.h  narpc_ioctl_response.h  narpc_lookup_response.h  narpc_namenode_client.h  narpc_remove_response.h  narpc_void_response.h
crail/client/narpc/: narpc_staging.cc  narpc_staging.h  network_utils.cc  rpc_client.cc  rpc_client.h  rpc_message.h
crail/client/storage/: storage_client.h
crail/client/storage/narpc/: narpc_read_request.h  narpc_read_response.h  narpc_storage_client.h  narpc_storage_request.h  narpc_storage_response.h  narpc_write_request.h  narpc_write_response.h
crail/client/utils/: log.cc  log.h
crail/narpc/: narpc_staging.cc  narpc_staging.h  network_utils.cc  rpc_client.cc  rpc_client.h
disni/: CMakeLists.txt
iobench/: CMakeLists.txt  iobench.cc
ioutils/: CMakeLists.txt
narpc/: CMakeLists.txt
test/: CMakeLists.txt  crailnative_test.cc  crailnative_test.hh
